--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
 		"dev": "doppler run -- rollup -c -w",
 		"dev:gql": "graphql-codegen --config --watch codegen.yml",
 		"codegen": "graphql-codegen --config codegen.yml",
-		"test": "jest --passWithNoTests"
+		"test": "jest --passWithNoTests",
+		"types:check": "tsc"
 	},
 	"repository": {
 		"type": "git",
