--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,13 @@
 	"module": "dist/indexESM.js",
 	"types": "dist/src/index.d.ts",
 	"scripts": {
-		"build": "yarn typegen && rollup -c",
+		"build": "yarn types:check && yarn typegen && rollup -c",
 		"typegen": "tsc",
 		"dev": "doppler run -- rollup -c -w",
 		"dev:gql": "graphql-codegen --config --watch codegen.yml",
 		"codegen": "graphql-codegen --config codegen.yml",
-		"test": "jest --passWithNoTests"
+		"test": "jest --passWithNoTests",
+		"types:check": "tsc"
 	},
 	"repository": {
 		"type": "git",
