--- a/highlight-next/package.json
+++ b/highlight-next/package.json
@@ -2,18 +2,18 @@
 	"name": "@highlight-run/next",
 	"version": "1.3.1",
 	"description": "Client for interfacing with Highlight in next.js",
-	"main": "dist/src/index.js",
-	"module": "esm/src/index.js",
+	"main": "./dist/index.js",
+	"module": "./dist/index.mjs",
+	"types": "./dist/index.d.ts",
 	"exports": {
-		"import": "./esm/src/index.js",
-		"require": "./dist/src/index.js"
+		".": {
+			"require": "./dist/index.js",
+			"import": "./dist/index.mjs",
+			"types": "./dist/index.d.ts"
+		}
 	},
-	"type": "module",
 	"scripts": {
-		"build": "run-p build:cjs build:esm",
-		"build:cjs": "tsc -p tsconfig.cjs.json",
-		"build:dev": "run-s build",
-		"build:esm": "tsc -p tsconfig.esm.json"
+		"build": "tsup src/index.ts --format cjs,esm --dts --clean"
 	},
 	"author": "",
 	"license": "ISC",
@@ -26,6 +26,7 @@
 	"devDependencies": {
 		"@types/node": "17.0.23",
 		"eslint": "8.12.0",
+		"tsup": "^6.2.3",
 		"typescript": "^4.8.2"
 	}
 }
