--- a/highlight-node/package.json
+++ b/highlight-node/package.json
@@ -2,23 +2,21 @@
 	"name": "@highlight-run/node",
 	"version": "1.3.1",
 	"license": "MIT",
-	"main": "dist/index.js",
-	"module": "esm/index.js",
-	"types": "dist/index.d.ts",
+	"main": "./dist/index.js",
+	"module": "./dist/index.mjs",
+	"types": "./dist/index.d.ts",
 	"exports": {
-		"import": "./esm/index.js",
-		"require": "./dist/index.js"
-	},
-	"type": "module",
-	"publishConfig": {
-		"access": "public"
+		".": {
+			"require": "./dist/index.js",
+			"import": "./dist/index.mjs",
+			"types": "./dist/index.d.ts"
+		}
 	},
 	"scripts": {
-		"build": "run-p build:cjs build:esm",
-		"build:cjs": "tsc -p tsconfig.cjs.json",
-		"build:dev": "run-s build",
-		"build:esm": "tsc -p tsconfig.esm.json",
-		"gql": "graphql-codegen --config --watch codegen.yml"
+		"build": "tsup src/index.ts --format cjs,esm --dts --clean"
+	},
+	"publishConfig": {
+		"access": "public"
 	},
 	"dependencies": {
 		"error-stack-parser": "2.0.7",
@@ -36,6 +34,7 @@
 		"@graphql-codegen/typescript-operations": "2.5.2",
 		"@types/lru-cache": "5.1.1",
 		"@types/node": "17.0.13",
+		"tsup": "^6.2.3",
 		"typescript": "^4.8.2"
 	}
 }
