--- a/highlight-node/tsconfig.json
+++ b/highlight-node/tsconfig.json
@@ -13,8 +13,7 @@
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"jsx": "react",
-		"types": ["node"],
-		"composite": true
+		"types": ["node"]
 	},
 	"include": ["src"],
 	"references": [{ "path": "../rrweb/packages/rrweb" }]
