--- a/sourcemap-uploader/package.json
+++ b/sourcemap-uploader/package.json
@@ -2,29 +2,28 @@
   "name": "@highlight-run/sourcemap-uploader",
   "version": "0.3.1",
   "description": "Command line tool to upload source maps to Highlight",
-  "main": "dist/src/index.js",
-  "bin": "./esm/src/index.js",
-  "module": "esm/src/index.js",
-  "exports": {
-    "import": "./esm/src/index.js",
-    "require": "./dist/src/index.js"
-  },
-  "types": "dist/src/index.d.ts",
+  "bin": "./dist/index.js",
   "author": "Highlight",
   "license": "MIT",
-  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
-    "format": "yarn prettier --write .",
-    "build": "run-p build:cjs build:esm",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:dev": "run-s build",
-    "build:esm": "tsc -p tsconfig.esm.json"
+    "build": "tsup src/index.ts --format cjs,esm --dts --clean"
   },
   "devDependencies": {
     "@types/glob": "^8.0.0",
     "@types/node-fetch": "^2.6.2",
     "@types/yargs": "^17.0.0",
-    "npm-run-all": "4.1.5"
+    "npm-run-all": "4.1.5",
+    "tsup": "^6.2.3"
   },
   "dependencies": {
     "@types/node": "17.0.23",
