--- a/highlight-next/package.json
+++ b/highlight-next/package.json
@@ -1,25 +1,32 @@
 {
 	"name": "@highlight-run/next",
-	"version": "1.3.0",
+	"version": "1.3.1",
 	"description": "Client for interfacing with Highlight in next.js",
-	"main": "dist/index.js",
+	"main": "./dist/index.js",
+	"module": "./dist/index.mjs",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": {
+			"require": "./dist/index.js",
+			"import": "./dist/index.mjs",
+			"types": "./dist/index.d.ts"
+		}
+	},
 	"scripts": {
-		"build": "run-p build:cjs build:esm",
-		"build:cjs": "tsc -p tsconfig.cjs.json",
-		"build:dev": "run-s build",
-		"build:es5": "yarn build:cjs # *** backwards compatibility - remove in v7 ***",
-		"build:esm": "tsc -p tsconfig.esm.json"
+		"build": "tsup src/index.ts --format cjs,esm --dts --clean"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"@highlight-run/node": "workspace:*",
+		"@highlight-run/sourcemap-uploader": "workspace:*",
 		"next": "12.1.6",
 		"npm-run-all": "4.1.5"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.23",
 		"eslint": "8.12.0",
-		"typescript": "4.6.3"
+		"tsup": "^6.2.3",
+		"typescript": "^4.8.2"
 	}
 }
