--- a/highlight-node/package.json
+++ b/highlight-node/package.json
@@ -1,20 +1,22 @@
 {
 	"name": "@highlight-run/node",
-	"version": "1.3.0",
+	"version": "1.3.1",
 	"license": "MIT",
-	"main": "dist/index.js",
-	"module": "esm/index.js",
-	"types": "dist/index.d.ts",
-	"publishConfig": {
-		"access": "public"
+	"main": "./dist/index.js",
+	"module": "./dist/index.mjs",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": {
+			"require": "./dist/index.js",
+			"import": "./dist/index.mjs",
+			"types": "./dist/index.d.ts"
+		}
 	},
 	"scripts": {
-		"build": "run-p build:cjs build:esm",
-		"build:cjs": "tsc -p tsconfig.cjs.json",
-		"build:dev": "run-s build",
-		"build:es5": "yarn build:cjs # *** backwards compatibility - remove in v7 ***",
-		"build:esm": "tsc -p tsconfig.esm.json",
-		"gql": "graphql-codegen --config --watch codegen.yml"
+		"build": "tsup src/index.ts --format cjs,esm --dts --clean"
+	},
+	"publishConfig": {
+		"access": "public"
 	},
 	"dependencies": {
 		"error-stack-parser": "2.0.7",
@@ -23,8 +25,7 @@
 		"graphql-tag": "2.12.6",
 		"highlight.run": "workspace:*",
 		"lru-cache": "7.3.1",
-		"npm-run-all": "4.1.5",
-		"typescript": "4.5.5"
+		"npm-run-all": "4.1.5"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "2.11.2",
@@ -32,6 +33,8 @@
 		"@graphql-codegen/typescript-graphql-request": "4.5.2",
 		"@graphql-codegen/typescript-operations": "2.5.2",
 		"@types/lru-cache": "5.1.1",
-		"@types/node": "17.0.13"
+		"@types/node": "17.0.13",
+		"tsup": "^6.2.3",
+		"typescript": "^4.8.2"
 	}
 }
