--- a/highlight-next/package.json
+++ b/highlight-next/package.json
@@ -1,32 +1,25 @@
 {
 	"name": "@highlight-run/next",
-	"version": "1.3.1",
+	"version": "1.3.0",
 	"description": "Client for interfacing with Highlight in next.js",
-	"main": "./dist/index.js",
-	"module": "./dist/index.mjs",
-	"types": "./dist/index.d.ts",
-	"exports": {
-		".": {
-			"require": "./dist/index.js",
-			"import": "./dist/index.mjs",
-			"types": "./dist/index.d.ts"
-		}
-	},
+	"main": "dist/index.js",
 	"scripts": {
-		"build": "tsup src/index.ts --format cjs,esm --dts --clean"
+		"build": "run-p build:cjs build:esm",
+		"build:cjs": "tsc -p tsconfig.cjs.json",
+		"build:dev": "run-s build",
+		"build:es5": "yarn build:cjs # *** backwards compatibility - remove in v7 ***",
+		"build:esm": "tsc -p tsconfig.esm.json"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"@highlight-run/node": "workspace:*",
-		"@highlight-run/sourcemap-uploader": "workspace:*",
 		"next": "12.1.6",
 		"npm-run-all": "4.1.5"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.23",
 		"eslint": "8.12.0",
-		"tsup": "^6.2.3",
-		"typescript": "^4.8.2"
+		"typescript": "4.6.3"
 	}
 }
