Revert "fix incorrect processing of `fetch` URL argument (#3166)"
This reverts commit 0bc7d727a0625801a744b93b39eb61a22e7d7d0d.

--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,18 @@
 {
 	"name": "@highlight-run/client",
 	"private": true,
-	"version": "1.3.2",
+	"version": "1.3.1",
 	"description": "rollup setup for writing a javascript library and making it available as script or npm package",
 	"main": "dist/index.js",
 	"module": "dist/indexESM.js",
 	"types": "dist/src/index.d.ts",
 	"scripts": {
-		"build": "yarn types:check && yarn typegen && rollup -c",
+		"build": "yarn typegen && rollup -c",
 		"typegen": "tsc",
 		"dev": "doppler run -- rollup -c -w",
 		"dev:gql": "graphql-codegen --config --watch codegen.yml",
 		"codegen": "graphql-codegen --config codegen.yml",
-		"test": "jest --passWithNoTests",
-		"types:check": "tsc"
+		"test": "jest --passWithNoTests"
 	},
 	"repository": {
 		"type": "git",
