--- a/highlight-next/package.json
+++ b/highlight-next/package.json
@@ -18,12 +18,12 @@
 	"author": "",
 	"license": "ISC",
 	"peerDependencies": {
-		"next": ">=12.3.1"
+		"next": ">=12.2.0"
 	},
 	"dependencies": {
 		"@highlight-run/node": "workspace:*",
 		"@highlight-run/sourcemap-uploader": "workspace:*",
-		"next": "12.3.1",
+		"next": "^12.2.6",
 		"npm-run-all": "4.1.5"
 	},
 	"devDependencies": {
