--- a/highlight-next/package.json
+++ b/highlight-next/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@highlight-run/next",
-	"version": "1.3.3",
+	"version": "1.3.4",
 	"description": "Client for interfacing with Highlight in next.js",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -17,10 +17,13 @@
 	},
 	"author": "",
 	"license": "ISC",
+	"peerDependencies": {
+		"next": ">=12.2.0"
+	},
 	"dependencies": {
 		"@highlight-run/node": "workspace:*",
 		"@highlight-run/sourcemap-uploader": "workspace:*",
-		"next": "12.1.6",
+		"next": "^12.2.6",
 		"npm-run-all": "4.1.5"
 	},
 	"devDependencies": {
