--- a/turbo.json
+++ b/turbo.json
@@ -53,9 +53,7 @@
 				"src/**/*.tsx",
 				"src/**/*.ts",
 				"test/**/*.ts",
-				"test/**/*.tsx",
-				"**/*.test.tsx",
-				"**/*.test.ts"
+				"test/**/*.tsx"
 			]
 		},
 		"sourcemaps": {
