--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,10 +6,9 @@
 	"scripts": {
 		"build": "build-storybook",
 		"g": "hygen",
-		"dev": "vite",
+		"dev": "start-storybook -p 6006",
 		"lint": "eslint",
-		"test": "vitest",
-		"storybook": "start-storybook -p 6006"
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@vanilla-extract/css": "^1.9.1",
@@ -20,9 +19,18 @@
 	"devDependencies": {
 		"@babel/core": "^7.19.3",
 		"@mdx-js/react": "^1.6.22",
+		"@storybook/addon-actions": "^6.5.12",
+		"@storybook/addon-docs": "^6.5.12",
+		"@storybook/addon-essentials": "^6.5.12",
+		"@storybook/addon-interactions": "^6.5.12",
+		"@storybook/addon-links": "^6.5.12",
+		"@storybook/builder-vite": "^0.2.4",
+		"@storybook/react": "^6.5.12",
+		"@storybook/testing-library": "^0.0.13",
 		"@testing-library/react": "^13.4.0",
 		"@typescript-eslint/eslint-plugin": "^5.40.0",
 		"@typescript-eslint/parser": "^5.40.0",
+		"@vanilla-extract/vite-plugin": "^3.6.1",
 		"babel-loader": "^8.2.5",
 		"eslint": "^8.25.0",
 		"eslint-plugin-jsx-a11y": "^6.6.1",
