Drop unwanted linting rules

--- a/packages/ui/.eslintrc.json
+++ b/packages/ui/.eslintrc.json
@@ -8,14 +8,5 @@
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": { "project": ["./tsconfig.json"] },
 	"plugins": ["@typescript-eslint"],
-	"rules": {
-		// TODO: Put some thought into these rules.
-		"@typescript-eslint/strict-boolean-expressions": [
-			2,
-			{
-				"allowString": false,
-				"allowNumber": false
-			}
-		]
-	}
+	"rules": {}
 }
