add tests to cover other rewrite use cases

--- a/highlight-next/tsconfig.json
+++ b/highlight-next/tsconfig.json
@@ -1,6 +1,10 @@
 {
 	"compilerOptions": {
-		"types": ["@highlight-run/sourcemap-uploader", "@highlight-run/node"],
+		"types": [
+			"@highlight-run/sourcemap-uploader",
+			"@highlight-run/node",
+			"jest"
+		],
 		"target": "ES6",
 		"skipLibCheck": true,
 		"allowSyntheticDefaultImports": true,
