--- a/highlight-next/package.json
+++ b/highlight-next/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@highlight-run/next",
-	"version": "1.4.0",
+	"version": "1.4.1",
 	"description": "Client for interfacing with Highlight in next.js",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -13,7 +13,8 @@
 		}
 	},
 	"scripts": {
-		"build": "tsup src/index.ts --format cjs,esm --dts --clean"
+		"build": "tsup src/index.ts --format cjs,esm --dts --clean",
+		"test": "jest"
 	},
 	"author": "",
 	"license": "ISC",
@@ -27,8 +28,11 @@
 		"npm-run-all": "4.1.5"
 	},
 	"devDependencies": {
+		"@types/jest": "27.4.1",
 		"@types/node": "17.0.23",
 		"eslint": "8.12.0",
+		"jest": "^29.2.0",
+		"ts-jest": "^29.0.3",
 		"tsup": "^6.2.3",
 		"typescript": "^4.8.2"
 	}
