--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"sourcemaps:frontend": "yarn workspace @highlight-run/frontend sourcemaps"
 	},
 	"devDependencies": {
+		"@storybook/preset-typescript": "^3.0.0",
 		"chalk": "^5.0.1",
 		"cypress": "^10.8.0",
 		"husky": "^8.0.1",
