--- a/highlight-next/package.json
+++ b/highlight-next/package.json
@@ -28,6 +28,7 @@
 		"npm-run-all": "4.1.5"
 	},
 	"devDependencies": {
+		"@trpc/server": "^9.27.4",
 		"@types/jest": "27.4.1",
 		"@types/node": "17.0.23",
 		"eslint": "8.12.0",
