--- a/highlight-next/package.json
+++ b/highlight-next/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@highlight-run/next",
-	"version": "1.4.1",
+	"version": "1.4.2",
 	"description": "Client for interfacing with Highlight in next.js",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -28,6 +28,7 @@
 		"npm-run-all": "4.1.5"
 	},
 	"devDependencies": {
+		"@trpc/server": "^9.27.4",
 		"@types/jest": "27.4.1",
 		"@types/node": "17.0.23",
 		"eslint": "8.12.0",
