--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@vanilla-extract/css": "^1.9.1",
 		"@vanilla-extract/sprinkles": "^1.5.0",
+		"clsx": "^1.2.1",
 		"react": "^18.2.0",
 		"react-aria": "^3.20.0"
 	},
