--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
 	"$schema": "https://turborepo.org/schema.json",
 	"pipeline": {
 		"codegen": {
-			"inputs": ["./**/*.gql"],
+			"inputs": ["./**/*.gql", "./**/*.graphqls"],
 			"outputs": ["src/graph/generated/**"]
 		},
 		"dev": {
