--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,8 @@
 		"eslint": "^8.18.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
+		"eslint-plugin-vitest": "^0.0.8",
+		"eslint-plugin-vitest-globals": "^1.2.0",
 		"jest": "^26.6.3",
 		"onchange": "^7.1.0",
 		"rollup": "^2.75.7",
