--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
 		"dev": "doppler run -- rollup -c -w",
 		"dev:gql": "graphql-codegen --config --watch codegen.yml",
 		"codegen": "graphql-codegen --config codegen.yml",
-		"test": "jest --passWithNoTests",
+		"test": "vitest",
 		"types:check": "tsc"
 	},
 	"repository": {
@@ -52,7 +52,8 @@
 		"rollup-plugin-filesize": "^9.1.2",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-web-worker-loader": "^1.6.1",
-		"typescript": "^4.1.3"
+		"typescript": "^4.1.3",
+		"vitest": "^0.24.1"
 	},
 	"dependencies": {
 		"@highlight-run/fingerprintjs": "^3.3.5",
