--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@highlight-run/client",
 	"private": true,
-	"version": "1.3.6",
+	"version": "1.3.7",
 	"description": "rollup setup for writing a javascript library and making it available as script or npm package",
 	"main": "dist/index.js",
 	"module": "dist/indexESM.js",
@@ -12,7 +12,7 @@
 		"dev": "doppler run -- rollup -c -w",
 		"dev:gql": "graphql-codegen --config --watch codegen.yml",
 		"codegen": "graphql-codegen --config codegen.yml",
-		"test": "jest --passWithNoTests",
+		"test": "vitest",
 		"types:check": "tsc"
 	},
 	"repository": {
@@ -35,7 +35,6 @@
 		"@rollup/plugin-json": "^4.1.0",
 		"@rollup/plugin-node-resolve": "^13.3.0",
 		"@rollup/plugin-replace": "^4.0.0",
-		"@types/jest": "^26.0.20",
 		"@types/json-stringify-safe": "^5.0.0",
 		"@types/node": "^16.3.1",
 		"@typescript-eslint/eslint-plugin": "^5.30.0",
@@ -43,7 +42,8 @@
 		"eslint": "^8.18.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
-		"jest": "^26.6.3",
+		"eslint-plugin-vitest": "^0.0.8",
+		"eslint-plugin-vitest-globals": "^1.2.0",
 		"onchange": "^7.1.0",
 		"rollup": "^2.75.7",
 		"rollup-plugin-consts": "^1.1.0",
@@ -52,7 +52,8 @@
 		"rollup-plugin-filesize": "^9.1.2",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-web-worker-loader": "^1.6.1",
-		"typescript": "^4.1.3"
+		"typescript": "^4.1.3",
+		"vitest": "^0.24.1"
 	},
 	"dependencies": {
 		"@highlight-run/fingerprintjs": "^3.3.5",
