--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@vanilla-extract/css": "^1.9.1",
+		"@vanilla-extract/recipes": "^0.2.5",
 		"@vanilla-extract/sprinkles": "^1.5.0",
 		"clsx": "^1.2.1",
 		"react": "^18.2.0",
