--- a/packages/ui/.eslintrc.json
+++ b/packages/ui/.eslintrc.json
@@ -1,20 +1,28 @@
 {
-	"root": true,
 	"env": {
 		"browser": true,
 		"node": true
 	},
 	"extends": [
 		"eslint:recommended",
+		"plugin:react/recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
 		"plugin:@typescript-eslint/recommended",
-		"plugin:jsx-a11y/recommended"
+		"plugin:@typescript-eslint/recommended-requiring-type-checking",
+		"plugin:jsx-a11y/recommended",
+		"prettier"
 	],
-	"files": ["**/*.ts", "**/*.tsx"],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"project": ["./tsconfig.json"]
 	},
 	"plugins": ["@typescript-eslint"],
-	"rules": {}
+	"rules": {
+		"@typescript-eslint/no-unsafe-assignment": "warn"
+	},
+	"settings": {
+		"react": {
+			"version": "detect"
+		}
+	}
 }
