bundle-size check for client

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"dev:backend": "cd backend && make start",
 		"dev:frontend": "yarn turbo run dev --filter frontend...",
 		"dev:redis": "redis-server",
+		"enforce-size": "yarn turbo run enforce-size --filter frontend...",
 		"format-check": "prettier --check --ignore-unknown . \"!./data\"",
 		"format:all": "prettier --write --ignore-unknown . \"!./data\"",
 		"frontend:start": "yarn dev:frontend",
