--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
 		"@types/node": "^16.3.1",
 		"@typescript-eslint/eslint-plugin": "^5.30.0",
 		"@typescript-eslint/parser": "^5.30.0",
+		"bundlesize": "^0.18.1",
 		"eslint": "^8.18.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
@@ -70,5 +71,11 @@
 		"ansi-regex": "5.0.1",
 		"terser": "5.14.2",
 		"json-schema": "0.4.0"
-	}
+	},
+	"bundlesize": [
+		{
+			"path": "dist/**.js",
+			"maxSize": "150 kB"
+		}
+	]
 }
