Configuration so we can use @highlight-run/ui in frontend

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -35,6 +35,7 @@
 	"references": [
 		{ "path": "../client" },
 		{ "path": "../firstload" },
+		{ "path": "../packages/ui" },
 		{ "path": "../rrweb/packages/rrweb" }
 	]
 }
