--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,7 +1,14 @@
 {
 	"extends": "../../tsconfig",
+	"include": ["src"],
 	"compilerOptions": {
 		"allowSyntheticDefaultImports": true,
+		"composite": true,
+		"declaration": true,
+		"declarationMap": true,
+		"incremental": true,
+		"rootDir": "src",
+		"outDir": "dist",
 		"types": ["vitest/globals"],
 		"paths": {
 			"@components": ["./src/components/"]
