Fix production builds

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,10 +2,13 @@
 	"name": "@highlight-run/ui",
 	"private": true,
 	"packageManager": "yarn@3.2.3",
+	"type": "module",
 	"main": "./src/index.ts",
+	"module": "./dist/ui.umd.cjs",
 	"types": "./dist/index.d.ts",
 	"scripts": {
-		"build": "tsc --build",
+		"build": "vite build",
+		"dev": "vite",
 		"docs:dev": "start-storybook -p 6006 --no-manager-cache",
 		"docs:build": "build-storybook",
 		"g": "hygen",
