enforce bundle size for firstload (#3230)
## Summary
Alongside some other bugs with the recent firstload/workspaces changes, we realized `client/` is being bundled alongside `firstload/`. This change adds an `enforce-size` build step to the `firstload` bundle to prevent any regressions on size.

## How did you test this change?
`yarn enforce-size` at the top level locally

in CI
![image](https://user-images.githubusercontent.com/1351531/197087267-49cf060b-bc0c-4766-9a35-17c0dfcfc5e0.png)
![image](https://user-images.githubusercontent.com/1351531/197087286-8a4dbbd8-9ccd-42df-9193-f8d1e3d3ccff.png)


## Are there any deployment considerations?
`test:all` will now run `enforce-size` step for firstload and client.
both bundles are ~100kB which gives us some leeway while preventing accidental bundle blowup

Co-authored-by: Jay Khatri <jaykhatrimail@gmail.com>

--- a/firstload/package.json
+++ b/firstload/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"build": "yarn typegen && rollup -c",
 		"dev": "doppler run -- rollup -c -w",
+		"enforce-size": "bundlesize",
 		"test": "vitest",
 		"typegen": "tsc"
 	},
@@ -17,6 +18,7 @@
 		"@rollup/plugin-node-resolve": "^13.3.0",
 		"@rollup/plugin-replace": "^4.0.0",
 		"@types/chrome": "^0.0.144",
+		"bundlesize": "^0.18.1",
 		"esbuild": "^0.14.47",
 		"rollup": "^2.75.7",
 		"rollup-plugin-consts": "^1.1.0",
@@ -26,5 +28,11 @@
 		"tslib": "^2.4.0",
 		"typescript": "^4.0.3",
 		"vitest": "^0.23.4"
-	}
+	},
+	"bundlesize": [
+		{
+			"path": "dist/**.js",
+			"maxSize": "150 kB"
+		}
+	]
 }
