--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,12 @@
 	"types": "dist/src/index.d.ts",
 	"scripts": {
 		"build": "yarn types:check && yarn typegen && rollup -c",
-		"typegen": "tsc",
+		"codegen": "graphql-codegen --config codegen.yml",
 		"dev": "doppler run -- rollup -c -w",
 		"dev:gql": "graphql-codegen --config --watch codegen.yml",
-		"codegen": "graphql-codegen --config codegen.yml",
+		"enforce-size": "bundlesize",
 		"test": "vitest",
+		"typegen": "tsc",
 		"types:check": "tsc"
 	},
 	"repository": {
@@ -39,6 +40,7 @@
 		"@types/node": "^16.3.1",
 		"@typescript-eslint/eslint-plugin": "^5.30.0",
 		"@typescript-eslint/parser": "^5.30.0",
+		"bundlesize": "^0.18.1",
 		"eslint": "^8.18.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
@@ -68,5 +70,11 @@
 	"resolutions": {
 		"ansi-regex": "5.0.1",
 		"json-schema": "0.4.0"
-	}
+	},
+	"bundlesize": [
+		{
+			"path": "dist/**.js",
+			"maxSize": "150 kB"
+		}
+	]
 }
