--- a/turbo.json
+++ b/turbo.json
@@ -42,6 +42,7 @@
 				"DISCORD_CLIENT_ID",
 				"LINEAR_CLIENT_ID",
 				"SLACK_CLIENT_ID",
+				"CLICKUP_CLIENT_ID",
 				"DD_CLIENT_TOKEN",
 				"DD_RUM_APPLICATION_ID"
 			]
