feat: add a script for local docker build & fix dockerhub push

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,5 +76,8 @@
 	},
 	"[sql]": {
 		"editor.defaultFormatter": "mtxr.sqltools"
+	},
+	"[shellscript]": {
+		"editor.defaultFormatter": "foxundermoon.shell-format"
 	}
 }
