--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
 		"object-path": "0.11.8",
 		"prismjs": "1.27.0",
 		"tmpl": "1.0.5",
-		"trim-newlines": "3.0.1"
+		"trim-newlines": "3.0.1",
+		"trim": "0.0.3",
+		"minimatch": "3.0.5"
 	}
 }
