--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,9 +17,9 @@
 		"@vanilla-extract/css": "^1.9.1",
 		"@vanilla-extract/recipes": "^0.2.5",
 		"@vanilla-extract/sprinkles": "^1.5.0",
+		"ariakit": "^2.0.0-next.41",
 		"clsx": "^1.2.1",
-		"react": "^18.2.0",
-		"react-aria": "^3.20.0"
+		"react": "^18.2.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.19.3",
