--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -42,19 +42,22 @@ jobs:
             - name: Build & test
               run: yarn test:all
 
-            - name: Upload frontend sourcemaps
-              if: github.ref == 'refs/heads/master'
-              run: yarn && yarn sourcemaps:frontend
-              env:
-                  HIGHLIGHT_API_KEY: ${{ secrets.HIGHLIGHT_SOURCEMAP_API_KEY }}
-
             - name: Configure AWS credentials
-              if: github.ref == 'refs/heads/master'
               uses: aws-actions/configure-aws-credentials@v1
               with:
                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws-region: us-east-2
+
+            - name: Publish client bundle
+              if: github.ref == 'refs/heads/master'
+              run: yarn publish:client
+
+            - name: Upload frontend sourcemaps
+              if: github.ref == 'refs/heads/master'
+              run: yarn && yarn sourcemaps:frontend
+              env:
+                  HIGHLIGHT_API_KEY: ${{ secrets.HIGHLIGHT_SOURCEMAP_API_KEY }}
 
             - name: Configure yarn npm registry credentials
               if: github.ref == 'refs/heads/master'
