--- a/client/package.json
+++ b/client/package.json
@@ -1,17 +1,19 @@
 {
 	"name": "@highlight-run/client",
 	"private": true,
-	"version": "1.3.8",
+	"version": "0.0.0",
 	"description": "rollup setup for writing a javascript library and making it available as script or npm package",
 	"main": "dist/index.js",
 	"module": "dist/indexESM.js",
 	"types": "dist/src/index.d.ts",
+	"type": "module",
 	"scripts": {
 		"build": "yarn types:check && yarn typegen && rollup -c",
 		"codegen": "graphql-codegen --config codegen.yml",
 		"dev": "doppler run -- rollup -c -w",
 		"dev:gql": "graphql-codegen --config --watch codegen.yml",
 		"enforce-size": "bundlesize",
+		"publish": "ts-node --esm src/scripts/publish.ts",
 		"test": "vitest",
 		"typegen": "tsc",
 		"types:check": "tsc"
@@ -28,6 +30,7 @@
 	},
 	"homepage": "https://github.com/highlight-run/highlight#readme",
 	"devDependencies": {
+		"@aws-sdk/client-s3": "^3.198.0",
 		"@graphql-codegen/cli": "^2.11.2",
 		"@graphql-codegen/typescript": "^2.7.2",
 		"@graphql-codegen/typescript-graphql-request": "^4.5.2",
@@ -53,6 +56,7 @@
 		"rollup-plugin-esbuild": "^4.9.1",
 		"rollup-plugin-filesize": "^9.1.2",
 		"rollup-plugin-web-worker-loader": "^1.6.1",
+		"ts-node": "^10.9.1",
 		"typescript": "^4.1.3",
 		"vitest": "^0.24.1"
 	},
