--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 		"g": "yarn generate",
 		"generate": "hygen",
 		"prepare": "husky install && patch-package",
-		"publish:all": "run-p --print-label publish:turbo publish:render",
+		"publish:all": "run-p --print-label publish:client publish:turbo publish:render",
+		"publish:client": "yarn workspace client publish",
 		"publish:turbo": "yarn workspaces foreach --no-private --from '@highlight-run/*' npm publish --access public --tolerate-republish && yarn workspace highlight.run npm publish --access public --tolerate-republish",
 		"publish:render": "yarn workspace render publish",
 		"test:all": "yarn turbo run test --filter=!@highlight-run/rrdom --filter=!@highlight-run/rrweb --filter=!@highlight-run/rrweb-snapshot",
