--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -49,8 +49,12 @@ jobs:
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws-region: us-east-2
 
+            - name: Validate project is ready to be published
+              run: yarn prepublish
+
+            # publish client on each PR push, replacing existing files
+            # this allows testing the prod client bundle from this PR
             - name: Publish client bundle
-              if: github.ref == 'refs/heads/master'
               run: yarn publish:client
 
             - name: Upload frontend sourcemaps
