--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"concurrently": "^6.5.1"
 	},
+	"type": "module",
 	"workspaces": [
 		"packages/*",
 		"client",
@@ -41,14 +42,18 @@
 		"g": "yarn generate",
 		"generate": "hygen",
 		"prepare": "husky install && patch-package",
+		"prepublish": "yarn prepublish:client",
+		"prepublish:client": "ts-node --esm scripts/upload.ts publish client --validate --replace",
 		"publish:all": "run-p --print-label publish:client publish:turbo publish:render",
-		"publish:client": "yarn workspace client publish",
-		"publish:turbo": "yarn workspaces foreach --no-private --from '@highlight-run/*' npm publish --access public --tolerate-republish && yarn workspace highlight.run npm publish --access public --tolerate-republish",
+		"publish:client": "ts-node --esm scripts/upload.ts publish client --replace",
 		"publish:render": "yarn workspace render publish",
+		"publish:turbo": "yarn workspaces foreach --no-private --from '@highlight-run/*' npm publish --access public --tolerate-republish && yarn workspace highlight.run npm publish --access public --tolerate-republish",
 		"test:all": "yarn turbo run test --filter=!@highlight-run/rrdom --filter=!@highlight-run/rrweb --filter=!@highlight-run/rrweb-snapshot",
 		"sourcemaps:frontend": "yarn workspace @highlight-run/frontend sourcemaps"
 	},
 	"devDependencies": {
+		"@aws-sdk/client-s3": "^3.198.0",
+		"@types/yargs": "^17.0.13",
 		"chalk": "^5.0.1",
 		"cypress": "^10.8.0",
 		"husky": "^8.0.1",
@@ -57,7 +62,10 @@
 		"patch-package": "^6.4.7",
 		"prettier": "^2.7.1",
 		"pretty-quick": "^3.1.3",
-		"turbo": "^1.5.4"
+		"semver": "^7.3.8",
+		"ts-node": "^10.9.1",
+		"turbo": "^1.5.4",
+		"yargs": "^17.6.0"
 	},
 	"packageManager": "yarn@3.2.3",
 	"resolutions": {
