move diff validation into github action

--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -33,6 +33,14 @@ jobs:
                   node-version: 16
                   cache: 'yarn'
 
+            - uses: dorny/paths-filter@v2
+              id: filter
+              with:
+                  filters: |
+                      highlight-run:
+                        - 'client/**'
+                        - 'firstload/**'
+
             - name: Install js dependencies
               run: yarn
 
@@ -50,6 +58,7 @@ jobs:
                   aws-region: us-east-2
 
             - name: Validate project is ready to be published
+              if: needs.changes.outputs.highlight-run == 'true'
               run: yarn prepublish
 
             # always publish client, even in PRs
@@ -57,6 +66,7 @@ jobs:
             # any previous builds, while doing this in PR will allow the PR frontend preview
             # to reference the PR's latest version of client
             - name: Publish client bundle
+              if: needs.changes.outputs.highlight-run == 'true'
               run: yarn publish:client
 
             - name: Upload frontend sourcemaps
