setup static.highlight.io client publishing (#3245)
## Summary

Configures the turbo.yml github action to publish a versioned client bundle to s3 bucket highlight-client-bundle
S3 bucket hosted publicly at https://static.highlight.io and is now referenced from firstload.

## How did you test this change?

Local deploy
Github action
<img width="664" alt="image" src="https://user-images.githubusercontent.com/1351531/199090344-526494b3-3c64-4760-87d9-bd86155ad869.png">


## Are there any deployment considerations?

Disabling render.com new client builds. We can eventually completely remove render.com and have static.highlight.run point to an alias in the client bundle s3 bucket. Will monitor datadog client versions.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"highlight-node",
 		"render",
 		"rrweb/packages/*",
+		"scripts",
 		"sourcemap-uploader"
 	],
 	"scripts": {
@@ -41,9 +42,11 @@
 		"g": "yarn generate",
 		"generate": "hygen",
 		"prepare": "husky install && patch-package",
-		"publish:all": "run-p --print-label publish:turbo publish:render",
-		"publish:turbo": "yarn workspaces foreach --no-private --from '@highlight-run/*' npm publish --access public --tolerate-republish && yarn workspace highlight.run npm publish --access public --tolerate-republish",
+		"prepublish": "yarn workspace scripts prepublish:client",
+		"publish:all": "run-p --print-label publish:client publish:turbo publish:render",
+		"publish:client": "yarn workspace scripts publish:client",
 		"publish:render": "yarn workspace render publish",
+		"publish:turbo": "yarn workspaces foreach --no-private --from '@highlight-run/*' npm publish --access public --tolerate-republish && yarn workspace highlight.run npm publish --access public --tolerate-republish",
 		"test:all": "yarn turbo run test --filter=!@highlight-run/rrdom --filter=!@highlight-run/rrweb --filter=!@highlight-run/rrweb-snapshot",
 		"sourcemaps:frontend": "yarn workspace @highlight-run/frontend sourcemaps"
 	},
