add rrweb changes to e2e

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -13,6 +13,7 @@ on:
             - 'cypress/**'
             - 'firstload/**'
             - 'frontend/**'
+            - 'rrweb/**'
 jobs:
     test:
         name: End-to-end Cypress Testing
