add e2e test timeout

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -19,6 +19,7 @@ jobs:
     test:
         name: End-to-end Cypress Testing
         runs-on: ubuntu-latest
+        timeout-minutes: 20
         env:
             ENVIRONMENT: test
             PGPASSWORD: postgres
