--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
 		"babel-plugin-react-wrapped-display-name": "^1.0.0",
 		"classnames": "^2.3.1",
 		"color-hash": "^2.0.1",
+		"dexie": "^3.2.2",
+		"dexie-react-hooks": "^1.1.1",
 		"dinero.js": "^2.0.0-alpha.8",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"firebase": "^8.10.1",
