--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,6 +74,7 @@
 		"react-virtualized-auto-sizer": "^1.0.6",
 		"react-virtuoso": "^2.13.1",
 		"recharts": "^2.1.13",
+		"rudder-sdk-js": "^2.20.0",
 		"source-map-explorer": "^2.5.2",
 		"stacktrace-js": "^2.0.2",
 		"subscriptions-transport-ws": "^0.11.0",
