--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,11 @@
 		"@stripe/stripe-js": "^1.32.0",
 		"@types/react-virtualized-auto-sizer": "^1.0.1",
 		"antd": "^4.17.0",
-		"apollo3-cache-persist": "^0.14.0",
 		"babel-plugin-react-wrapped-display-name": "^1.0.0",
 		"classnames": "^2.3.1",
 		"color-hash": "^2.0.1",
+		"dexie": "^3.2.2",
+		"dexie-react-hooks": "^1.1.1",
 		"dinero.js": "^2.0.0-alpha.8",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"firebase": "^8.10.1",
