--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@apollo/client": "^3.7.0",
 		"@babel/core": "^7.19.0",
+		"@ctrl/tinycolor": "^3.4.1",
 		"@datadog/browser-logs": "^4.13.0",
 		"@datadog/browser-rum": "^4.21.0",
 		"@fontsource/poppins": "^4.5.9",
