--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -33,8 +33,8 @@
 	},
 	"exclude": ["**/node_modules/**", "**/build/**"],
 	"references": [
-		{ "path": "../client" },
-		{ "path": "../firstload" },
-		{ "path": "../rrweb/packages/rrweb" }
+		{ "path": "../highlight-javascript/client" },
+		{ "path": "../highlight-javascript/firstload" },
+		{ "path": "../highlight-javascript/rrweb/packages/rrweb" }
 	]
 }
